# csvenum

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pisse.rs
benches/testdata/: country.rs  country_data.csv  smol.csv
examples/: animals.csv  animals.rs  car.rs  cars_duplicate_values.csv  country.rs  country_data.csv
src/: cli.rs  code_gen.rs  enumtable.rs  lib.rs  main.rs  parser.rs  properties.rs  reader.rs  table.rs  to_code.rs  types.rs  utils.rs  variants.rs
src/code_gen/: codeblocks.rs  enumdecl.rs  fragments.rs  gen_error.rs  propfns.rs  testblock.rs  trait_impl.rs  utils.rs
src/code_gen/codeblocks/: matchblock.rs  textblock.rs
src/code_gen/fragments/: declarations.rs
src/code_gen/fragments/declarations/: functions.rs  variables.rs
src/enumtable/: structs.rs
src/to_code/: codeblocks.rs  constblock.rs  enumblock.rs  funcblock.rs  types.rs
src/to_code/codeblocks/: closure.rs  enumblock.rs  fnblock.rs  matchblock.rs
src/to_code/types/: containers.rs  numeric.csv  numeric.rs  parser.rs  rtype.rs  special.rs  strings.csv  stringtype.rs  type_const.rs  type_container.rs
src/types/: containers.rs  numeric.rs  reference.rs  rtypetrait.rs  special.rs  stringtype.rs
src/types/containers/: arraytype.rs  tupletype.rs  utils.rs  vectortype.rs
src/types/special/: enumtype.rs
