[package]
name = "csvenum"
version = "0.1.0"
edition = "2021"
description = "Codegen for enums with associated constants"
documentation = "https://docs.rs/csvenum"
repository = "https://github.com/J-Bockhofer/csvenum"
license = "MIT"
keywords = ["eeg", "BrainVision"]
categories = ["science::neuroscience","parsing", "parser-implementations"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
thiserror = "1.0.57"

[[bin]]
name = "csvenum"
path = "src/cli.rs"
