[package]
name = "csvenum"
version = "0.1.0"
edition = "2021"
authors = ["Joris Bockhofer <joris.bockhofer@t-online.de>"]
documentation = "https://docs.rs/csvenum"
repository = "https://github.com/J-Bockhofer/csvenum"
homepage = "https://github.com/J-Bockhofer/csvenum/README.md"
license = "MIT/Apache-2.0"
keywords = ["CLI", "csv", "enum", "codegen", "associated constants" ]
categories = ["command-line-utilities","development-tools::cargo-plugins", "data-structures"]
readme = "README.md"
description = """
Generate code for enums with associated constants from a .csv in your command line.
"""

exclude = [
    "/examples",
]

[badges]
travis-ci = { repository = "csvenum", branch = "main" }
maintenance = { status = "actively-developed" }


[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
thiserror = "1.0.57"

[[bin]]
name = "csvenum"
path = "src/cli.rs"
